--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "draft-js": "^0.11.7",
     "mic-recorder-to-mp3": "^2.2.2",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^1.0.4",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-media-recorder": "^1.6.6",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "web-vitals": "^2.1.4"
