--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^1.2.3",
     "draft-js": "^0.11.7",
     "mic-recorder-to-mp3": "^2.2.2",
